# rag_chatbot

./: .gitignore  pyproject.toml
resource/4e555445-1933-41b7-9a44-263d7c1e2b8a/: index_metadata.pickle
src/: main.py  util.py
