[tool.poetry]
name = "rag-chatbot"
version = "0.1.0"
description = ""
authors = ["david.yang <cleverykh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
spacy = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
